--- a/gb/nf3046_4.md
+++ b/gb/nf3046_4.md
@@ -52,6 +52,7 @@ https://youtu.be/-lZLrOIRsHM
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/9/24/n12427345.md#1" target="_blank">【珍言真语】张朴：港人反暴政 树立中国榜样</a><br></h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/9/24/n12427345.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/09/a5a637afad5e032d4c861c6bb96665b2-150x120.jpg" align ="left"></a>旅英华人作家张朴表示，香港人已为海内外华人竖立一个“反暴政、反独裁、反专制”的榜样，将留名历史，他相信“榜样的力量是无穷的”，中国大陆民众也将步上香港人反暴政、争取自由之路。他认为将来美国继续围剿中共的话，“香港的未来，乃至中国大陆的未来，一句话就是我们所说的‘天灭中共’。”......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年09月24日 11:52 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/9/24/n12426719.md#1" target="_blank">谭笑飞：美中脱钩与“三退”大潮</a><br></h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/9/24/n12426719.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/09/GettyImages-1148901571-1-600x400-150x120.jpg" align ="left"></a>最近一段时间，美国政府与中共全面脱钩的趋势日益明显。就在一年以前，美中贸易协议一直是川普的头等大事之一。但是中共病毒爆发后，中共掩盖真相隐瞒疫情，直接导致全球传播，给美国造成了巨大的生命财产损失；而中共战狼外交倒打一耙，到处甩锅；中共在香港持续倒行逆施，出台了港版国安法；而安提法等组织的暴力分子在美国制造骚乱，背后也有中共的影子。川普明确表示“美中贸易协议已.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年09月24日 3:50 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/9/24/n12426465.md#1" target="_blank">宇尘：中共是如何绑架中国民众的</a><br></h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/9/24/n12426465.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/09/8b6f854af58ed5ccc15bcb28b662a2a4-600x400-150x120.jpg" align ="left"></a>中共与美国之间的冷战已经展开，对于穷途末路的中共来说，它们之所以敢跟美国对抗，并非是它们有多少核弹头，有多少军舰，而是它们用国家暴力绑架了十四亿的中国人作为人质。美国的任何制裁，中共都会将其转嫁到中国民众身上。所以大裤衩央视才会说：任何的困难除以十四亿都微不足道，十四亿中国人民就是它们的铜墙铁壁。哪怕中美国脱钩，只要中共有这十四亿人质，照样过着共产主义的幸福.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年09月24日 2:08 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/10/4/n12451331.md#1" target="_blank">每日三退声明精选（2020/10/03）</a><br></h3>中共是共产国际窃取民国合法政权的非法恐怖组织，自诞生后给中华大地带来无尽苦难，给世界和平和民主进程带来巨大恶果，上亿甚至几亿的无辜生命惨遭罹难，近年更是以各种人造病毒祸害与挑战全球当前秩序，企图控制人类生存与发展并掩盖真相，其罪行与恶果謦书难尽。本人曾是计生的受害者，在单位屡被打压多年！被当地监控多年！自2016年以来，本人觉醒后多年设法退出该邪恶中共组织.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月04日 9:24 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/10/3/n12449953.md#1" target="_blank">【重磅】美国禁共产党员移民</a><br></h3>美国移民局10月2日发布的政策公吿指出，美国停止共产党或其它极权政党的成员、或附属组织成员的移民身份调整。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月03日 9:40 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/10/1/n12445540.md#1" target="_blank">每日三退声明精选（2020/10/01）</a><br></h3>从中共邪党对内强摘器官，迫害法轮功学员，到毒奶粉、毒疫苗残害下一代，再到打压维权律师、迫害宗教自由、监控异见人士、鱼肉弱势群体；对外撕毁《中英联合声明》公然耍流氓，夺取香港人民的自由，在新疆大肆兴建再教育营拘押维吾尔族人。直至武汉肺炎爆发，先是瞒而不报，后是全球甩锅，央视骂街，战狼外交，率先邀功，丧事喜办，哪顾人民死活？！这个政权打着人民的旗号做下的坏事竟是.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月02日 12:32 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/10/1/n12444402.md#1" target="_blank">任世豪：看清中共 它把人民当炮灰</a><br></h3>二零二零年九月八日，中共在北京人民大会堂举行“全国抗击新冠肺炎疫情表彰大会”，当时数百人排成巨大的环状合影。移居美国的中共中央党校退休教授蔡霞批评，中共总书记习近平似乎担心“武汉肺炎”（中共病毒，COVID-19）疫情，怕被新冠病毒感染，才让与会众人排成怪异的大圆圈，可见中共既怕死又自私。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月01日 4:21 PM							</td></tr>
@@ -61,6 +62,5 @@ https://youtu.be/-lZLrOIRsHM
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/9/25/n12431207.md#1" target="_blank">王友群：中宣部长陆定一文革被关秦城监狱之谜</a><br></h3>1966年5月，中共召开政治局扩大会议，通过《五一六通知》，十年文化大革命正式开始。就在这次会议上，时任中共中央宣传部长陆定一，被打成为“彭罗陆杨反党集团”成员，撤销中宣部长职务。9月30日，被“隔离反省”。
 
 1966年11月28日，北京举行文艺界文化大革命大会，毛泽东的妻子、中央文革小组副组长江青在会上说：“旧北京市委、旧中宣部、旧文化部互相勾结，对.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年09月26日 6:31 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/9/24/n12426110.md#1" target="_blank">每日三退声明精选（2020/09/23）</a><br></h3>我们都是从所谓的“旧社会”走过来的人，经历过多次的各种“运动”，相比之下对共产党的丑恶面目看的非常清楚，被压抑和坑害了一辈子，今天终于有机会说出自己的心里话：退出过去曾经被动参加过的共产党的所有邪恶组织，跳出这个共产邪恶主义构成的人间地狱。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年09月24日 11:19 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf3046_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf3046_5.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/cvusyr3283/djy/blob/master/gb/nf3046_4.md#1<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf3046_4.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cvusyr3283/djy/blob/master/gb/nf3046_4.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf3046_4.htm">https://www.epochtimes.com/gb/nf3046_4.htm</a>    （国内需<a href="https://github.com/cvusyr3283/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
